--- a/textPPTServer/package.json
+++ b/textPPTServer/package.json
@@ -8,8 +8,12 @@
     "socket.io": "^1.4.8",
     "express": "^4.14.0"
   },
+  "engines": {
+    "node": "4.1.1"
+  },
   "devDependencies": {},
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
